# Wheather-FastAPI-Production-Ready-API-Control-And-Management

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  RESILIENCE_STRATEGY.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  exceptions.py  main.py
app/api/: dependencies.py
app/api/routes/: health.py  metrics.py  weather.py
app/middleware/: circuit_breaker.py  metrics.py  rate_limit.py
app/models/: response.py  weather.py
app/services/: weatherstack.py
